applications/core/saas-fabric-control-plane/base/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-fabric-control-plane-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: saas-fabric-control-plane-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
